--- a/index.html
+++ b/index.html
@@ -204,12 +204,12 @@
         <!--end of section title-->
         
         <!--Buttons-->
-        <div class="resume-buttons page-buttons">
+          <div class="resume-buttons page-buttons">
           <!--Download CV button-->
-          <a href="CV.pdf" class="btn btn-default btn-default2" download><i class="fa fa-download"></i>  Download my resume</a>
+          <a href="CV.pdf" class="btn btn-default btn-default2" download><i class="fa fa-download"></i><span class="res-col">  Download my resume</span></a>
           <!--/Download CV button-->
           <!--Get in Touch Button-->
-           <a href="#page-contact" class="btn btn-default btn-default2 link-page"><i class="fa fa-paper-plane"></i>  Get in touch</a>
+           <a href="#page-contact" class="btn btn-default btn-default2 link-page"><i class="fa fa-paper-plane"></i><span class="res-col">  Get in touch</span></a>
           <!--/Get in Touch Button-->
         </div>
         <!--End of Buttons-->
@@ -411,12 +411,12 @@
       <!--Page Footer-->
       <div class="page-footer">
         <!--Buttons-->
-        <div class="resume-buttons page-buttons">
+           <div class="resume-buttons page-buttons">
           <!--Download CV button-->
-          <a href="CV.pdf" class="btn btn-default btn-default2"><i class="fa fa-download"></i>  Download my resume</a>
+          <a href="CV.pdf" class="btn btn-default btn-default2" download><i class="fa fa-download"></i><span class="res-col">  Download my resume</span></a>
           <!--/Download CV button-->
           <!--Get in Touch Button-->
-           <a href="#page-contact" class="btn btn-default btn-default2 link-page"><i class="fa fa-paper-plane"></i>  Get in touch</a>
+           <a href="#page-contact" class="btn btn-default btn-default2 link-page"><i class="fa fa-paper-plane"></i><span class="res-col">  Get in touch</span></a>
           <!--/Get in Touch Button-->
         </div>
         <!--End of Buttons-->
