--- a/index.html
+++ b/index.html
@@ -267,11 +267,11 @@
 
                     <li>Ran usability tests based on data-driven approaches for the new version of the application</li>
 
-                    <li>Conducted interview with more than 15 people for the usability testing</li>
+                    <li>Conducted interview with more than 10 people for the usability testing</li>
 
-                    <li>Redesigning the onboarding part of the app</li>
+                    <li>Redesigning the new version of the app</li>
                   
-                    <li>Collaborated with marketing unit and managing the Facebook business</li>
+                    <li>Collaborated with marketing unit and partly managing the Facebook business</li>
             </ul> 
               
           </div>
