--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
       <div class= "vcard-description">
         <!--vcard-Description-Profile-->
         <h1 class= "profile-title">Hi, I'm <span class="color1">Parniya Saeedzadeh</span></h1>
-        <h2 class= "profile-subtitle">Full time Product Designer <br/> Singing and Music enthusiastic<br>It's all about Technology and Art together</h2>
+        <h2 class= "profile-subtitle">Full time Product Designer <br/> Singing and Music enthusiastic<br>Where technology and design meets, I'll be there!</h2>
         <hr class="hr1">
         <!--End of vcard-Description-Profile-->
         <!--vcard-Description-Text-->
@@ -896,13 +896,7 @@
                         <span class="progress-type">Italian</span>
                         <span class="progress-completed">4 / 10</span>
                       </div>
-                            <div class="progress">
-                        <div class="progress-bar progress-bar-2" role="progressbar" data-percent="30%" style="width:30%;">
-                            <span class="sr-only">30% Complete</span>
-                        </div>
-                        <span class="progress-type">Arabic</span>
-                        <span class="progress-completed">3 / 10</span>
-                      </div>
+                           
                     </li>
                     <!-- /item list -->
           <!-- item-list -->
