--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
       <div class= "vcard-description">
         <!--vcard-Description-Profile-->
         <h1 class= "profile-title">Hi, I'm <span class="color1">Parniya Saeedzadeh</span></h1>
-        <h2 class= "profile-subtitle">Full time Product Designer <br/> Singing and Music enthusiastic<br>Where technology and design meets, I'll be there!</h2>
+        <h2 class= "profile-subtitle">Full time Product Designer <br/> Singing and Music enthusiastic<br>Where technology and design meet, I'll be there!</h2>
         <hr class="hr1">
         <!--End of vcard-Description-Profile-->
         <!--vcard-Description-Text-->
