--- a/index.html
+++ b/index.html
@@ -269,9 +269,9 @@
               </p>
                  <ul style=“list-style-type:square”>
 
-                    <li>Developed usability tests based on data-driven approaches </li>
+                    <li>Developed usability tests based on data-driven approaches  </li>
 
-                    <li>Conducted interview with more than 15 people for the usability testing</li>
+                    <li>Conducted interview with some people for the usability testing</li>
 
                     <li>Redesigning the new version of the app</li>
                   
