--- a/index.html
+++ b/index.html
@@ -355,7 +355,7 @@
           <h3 class="resume-item-title">Pelakino Department &nbsp<i class="fa fa-map-marker"></i><span class="job-loc"> Tehran,Iran</span></h3>
           <!--/item-title-->
           <!--item-text-->
-          <h4 class="job">Senior Graphic designer <br/><span class="job-date">July 2018 - February 2020</span></h4>
+          <h4 class="job">Graphic designer <br/><span class="job-date">July 2018 - February 2020</span></h4>
           <!--/item-text-->
           <!--item-description-->
           <div class="resume-item-description">
@@ -382,7 +382,7 @@
           <h3 class="resume-item-title">Attar Institute &nbsp<i class="fa fa-map-marker"></i><span class="job-loc"> Tehran,Iran</span></h3>
           <!--/item-title-->
           <!--item-text-->
-          <h4 class="job">Teaching English at Attar Institute <br/><span class="job-date">Agust 2015 - March 2017</span></h4>
+          <h4 class="job">English Instructor<br/><span class="job-date">Agust 2015 - March 2017</span></h4>
           <!--/item-text-->
           <!--item-description-->
           <div class="resume-item-description">
