--- a/index.html
+++ b/index.html
@@ -1080,7 +1080,7 @@
           <h3 class="resume-item-title">Software Engineering 2</h3>
           <!--/item-title-->
           <!--item-text-->
-          <h4 class="job-port">CLup is an app aims to guide and help people to line-up for the supermarket to enter easily during COVID pandemy. This project aimed to show the whole process of starting an application mostly as an engineering prspective. You can look at the Design Document to know a bit more. </h4>
+          <h4 class="job-port">CLup is an app aims to guide and help people to line-up for the supermarket to enter easily during COVID pandemy. This project aimed to show the whole process of building an application mostly as an engineering prespective. You can look at the Design Document to know a bit more. </h4>
           <!--/item-text-->
           <!--item-description-->
           <div class="resume-item-description">
