--- a/index.html
+++ b/index.html
@@ -997,7 +997,7 @@ I’ve always had this interest to make a bridge between tech and design, and be
           <!--/item-text-->
           <!--item-description-->
           <div class="resume-item-description">
-              <a href="https://www.behance.net/gallery/160161487/Revolute-UX-Redesign-DEC-2022" class="project-thumbnail nivobox pic" data-lightbox-gallery="portfolio" style="background-image: url(img/cover.jpg);">
+              <a href="https://www.behance.net/gallery/160161487/Revolute-UX-Redesign-DEC-2022" class="project-thumbnail nivobox pic" data-lightbox-gallery="portfolio" style="background-image: url(img/cover.png);">
 							<!-- project-description -->
 							<div class="project-description-wrapper">
 								<div class="project-description">
