--- a/index.html
+++ b/index.html
@@ -920,7 +920,7 @@ I’ve always had this interest to make a bridge between tech and design, and be
 			<div class="panel ">
           <div class="panel-heading">
           <h4>
-          	<a data-toggle="collapse" data-parent="#accordion" href="#collapse2" class="coll">UX Case Studies</a>
+          	<a data-toggle="collapse" data-parent="#accordion" href="#collapse2" class="coll">Personal UX Case Studies</a>
           	</h4>
           	
           	
