--- a/index.html
+++ b/index.html
@@ -215,7 +215,7 @@ I’ve always had this interest to make a bridge between tech and design, and be
         <!-- Resume Item-->
       <div class="resume-item">
               <!--item-title-->
-              <h3 class="resume-item-title">M.Sc  of  Telecommunicatio  Engineering</h3>
+              <h3 class="resume-item-title"></h3>
               <!--/item-title-->
               <!--item-text-->
               <h4 class="resume-item-text">Politecnici di Milano   <span class="grad-date">(2020 - 2022)</span></h4>
@@ -224,7 +224,7 @@ I’ve always had this interest to make a bridge between tech and design, and be
           <!-- Resume Item2-->
             <div class="resume-item">
           <!--item-title-->
-          <h3 class="resume-item-title">B.S  of  IT  Engineering</h3>
+          <h3 class="resume-item-title"></h3>
           <!--/item-title-->
           <!--item-text-->
           <h4 class="resume-item-text">Alzahra University of Tehran   <span class="grad-date"> (2015 - 2019) </span></h4>
@@ -280,14 +280,14 @@ I’ve always had this interest to make a bridge between tech and design, and be
          <!-- Resume Item-->
         <div class="resume-item">
           <!--workplace-title-->
-          <h3 class="resume-item-title">Lokafy &nbsp<i class="fa fa-map-marker"></i> <span class="job-loc"> Toronto,Canada</span></h3>
+          <h3 class="resume-item-title"> &nbsp<i class="fa fa-map-marker"></i> <span class="job-loc"> Toronto,Canada</span></h3>
           <!--/item-title-->
           <!--item-text-->
           <h4 class="job">UI/UX Designer <br/><span class="job-date">October 2020 - July 2022</span></h4>
           <!--/item-text-->
           <!--item-description-->
           <div class="resume-item-description">
-            <p>Lokafy is a company that connects travelers to locals (Lokafyers). It is based on Toronto, Canada. I work with this company remotely from Milan, Italy. Here is the summary of what I did: <br/> </p>
+            <p><br/> </p>
               <ul style=“list-style-type:square”>
 
                     <li>Applied the user-centered approach through UX methodologies, outlining the the UX process</li>
